# Cengine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
engine/: build.bat
engine/assets/shaders/: default_fragment.glsl  default_vertex.glsl  font_fragment.glsl  font_vertex.glsl
engine/assets/textures/: player.aseprite
engine/src/cengine/: macros.h
engine/src/cengine/core/: application.c  application.h  defines.h  event_system.c  event_system.h  global_state.c  global_state.h  logging.h  util.c  util.h
engine/src/cengine/ecs/: array_stack.c  array_stack.h  components.c  components.h  ecs.c  ecs.h  systems.c  systems.h
engine/src/cengine/game/: game.c  game.h  player_camera.c  player_camera.h
engine/src/cengine/math/: matrix.h  matrix2.c  matrix2.h  matrix3.c  matrix3.h  matrix4.c  matrix4.h  matrix_transform.c  matrix_transform.h  radians.c  radians.h  vector.h  vector2.c  vector2.h  vector3.c  vector3.h  vector4.c  vector4.h
engine/src/cengine/physics/: phys_def.c  phys_def.h
engine/src/cengine/platform/: platform.h  platform_linux.c  platform_win32.c
engine/src/cengine/platform/opengl/: gl_functions.c  gl_functions.h  gl_loader.c  gl_loader.h
engine/src/cengine/platform/opengl/ext/: glcorearb.h
engine/src/cengine/platform/opengl/loader/: glad.c  glad.h  glad_wgl.c  glad_wgl.h
engine/src/cengine/renderer/: asset_pool.c  asset_pool.h  batch_renderer.c  batch_renderer.h  quad2d.c  quad2d.h  render_buffers.c  render_buffers.h  render_command.c  render_command.h  render_defines.h  renderer2d.c  renderer2d.h  scene.c  scene.h  shader.c  shader.h  sprite_animation.c  sprite_animation.h  subtexture2d.c  subtexture2d.h  texture.c  texture2d.c  texture2d.h  tilemap.c  tilemap.h  triangle2d.c  triangle2d.h  vertex_array.c  vertex_array.h
engine/src/cengine/ui/: font_renderer.c  font_renderer.h  ui_core.c  ui_core.h
game/: CMakeLists.txt  build.bat
game/src/: main.c
game/src/game/: game.c  game.h  player_camera.c  player_camera.h
scripts/: build_all.bat
testbed/: build.bat
testbed/src/: main.c
